# of_autoresearch

./: autoresearch-results.tsv  base.py  base_v2.py  classifier_diag.py  classifier_improved.py  classifier_tree.py  classifier_v10.py  classifier_v11.py  classifier_v12.py  classifier_v13.py  classifier_v14.py  classifier_v15.py  classifier_v16.py  classifier_v17.py  classifier_v18.py  classifier_v19.py  classifier_v1_cpu.py  classifier_v2.py  classifier_v20.py  classifier_v21.py  classifier_v22.py  classifier_v23.py  classifier_v24.py  classifier_v25.py  classifier_v25_predict.py  classifier_v2_cpu.py  classifier_v2_cpu_predict.py  classifier_v2_cpu_predict.py.iter6_backup  classifier_v3.py  classifier_v4.py  classifier_v5.py  classifier_v6.py  classifier_v6b.py  classifier_v7.py  classifier_v8.py  classifier_v9.py  cold_start_eval.py  cold_start_test.py  count.py  db.py  (+29 more)
js/: classify.js  package-lock.json  package.json  results_js.csv
models_cpu/: features.json  thresholds.json  warm_vh_rescue_model.pkl
models_cpu_baseline/: thresholds.json  warm_vh_rescue_model.pkl
models_cpu_exp4_backup/: features.json  thresholds.json  warm_vh_rescue_model.pkl
models_cpu_iter3/: features.json  thresholds.json
