[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous pretraining research swarm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "click>=8.3.2",
    "colorama>=0.4.6",
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "fonttools>=4.62.1",
    "greenlet>=3.4.0",
    "joblib>=1.5.3",
    "lightgbm>=4.0.0",
    "kernels>=0.11.7",
    "kiwisolver>=1.5.0",
    "matplotlib>=3.10.8",
    "mypy-extensions>=1.1.0",
    "numpy>=2.4.4",
    "packaging>=26.1",
    "pandas>=3.0.2",
    "pathspec>=1.0.4",
    "peewee>=4.0.4",
    "pillow>=12.2.0",
    "platformdirs>=4.9.6",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=21.0.0",
    "pyee>=13.0.1",
    "pyparsing>=3.3.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytokens>=0.4.1",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "six>=1.17.0",
    "soupsieve>=2.8.3",
    "threadpoolctl>=3.6.0",
    "tiktoken>=0.11.0",
    "torch==2.9.1",
    "typing-extensions>=4.15.0",
    "tzdata>=2026.1",
    "xgboost>=3.2.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
